# AMP-Example

./: .clang-format  CMakeLists.txt  README.txt  cppcheckSuppressionFile
cmake/: ctest_script.cmake  libraries.cmake
src/: CMakeLists.txt  print.cpp  print.h
src/doxygen/html/: header.html
src/test/: CMakeLists.txt  test_hello.cpp
